<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.non_auth.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/google_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ed_home_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/firebase_amber"
            android:textSize="60sp"
            android:textStyle="bold"
            tools:text="C A L I S" />

        <ImageView
            android:id="@+id/iv_note"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/splash_image" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="64dp"
            android:text="@string/login_note"
            android:textColor="@color/firebase_amber"
            android:textSize="18sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_sign_in"
        style="@style/ButtonWhiteBorder"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/google"
        android:text="@string/with_sign_in"
        app:backgroundTint="@null"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/without_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/without_sign_in"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/without_sign_in"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>