<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        app:navigationIcon="@drawable/ic_baseline_arrow_toolbar"
        app:title="@string/add_category"
        app:titleTextColor="@color/white" />

    <!-- Main Content Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Category TextInputLayout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_category"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- SubCategory Container -->
        <LinearLayout
            android:id="@+id/subCategoryContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"/>

        <!-- Add SubCategory Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddSubCategory"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:backgroundTint="@null"
            android:text="@string/add_another_category" />

        <!-- Add Category Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddCategory"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:backgroundTint="@null"
            android:text="@string/add_data" />
    </LinearLayout>

    <!-- Loading Animation -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingAnimation"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button_11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_autoPlay="true"
        android:visibility="gone"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_anim" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
